2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* glines.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2006-01-08  Callum McKenzie  <callum@spooky-possum.org>

	* glines.c: Patch to allow compilation with the Forte C
	compiler. (Damien Carbery, Bug #326024.)

2006-01-05  Callum McKenzie  <callum@spooky-possum.org>

	* glines.c (main): Doh! Forgot to add the setgid_io_init call to
	glines. (Bug #325764.)

2005-10-25  Callum McKenzie  <callum@spooky-possum.org>

	* glines.c (button_press_event): Fix bug #319364 by clamping the x
	and y box coordinates to the grid size.

2005-09-07  Callum McKenzie  <callum@spooky-possum.org>

	* glines.c: Update to use the new high scores API.

2005-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Added context tags as per the request in bug #312802.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/glines.xml: Bump the version number and redo the
	screenshots. 

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* glines.c: Make ui_description readonly.

2005-07-10  Richard Hoelscher  <rah@rahga.com>

	* glines.c (show_scores): Scores dialog style as descending (#309958)

2005-06-24  Richard Hoelscher  <rah@rahga.com>

	* glines.c (set_statusbar_message): Use GtkStatusbar, not GnomeAppBar.

2005-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patch from Paolo Borelli to fix a leaked string.

2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/glines.xml: Removed Known Bugs sections where not needed.

2005-04-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: 	
	* glines.xml: Muck around with the labels again: now items are
	objects and the documentation has been updated to reflect this and