@@ -1,3 +1,9 @@
+2006-03-22  Callum McKenzie  <callum@spooky-possum.org>
+
+	* help/C/glines.xml: Remove the doctable link, it was broken
+	*and* being used inappropriately. Replaced with the 
+	ghelp:gnome-feedback link. Bug #335263.
+
 2006-01-17  Callum McKenzie  <callum@spooky-possum.org>
 
 	* glines.c: Patch from Scott Bronson to ensure user-edited
